# cbt-journal

./: .bandit  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CODE_QUALITY_SETUP.md  DEVELOPMENT.md  Makefile  PROJECT-MANIFESTO.md  pyproject.toml  requirements-dev.txt  requirements.txt
cbt_journal/ai/: embedding_providers.py
cbt_journal/rag/: vector_store.py
cbt_journal/utils/: cost_cli.py  cost_control.py
docker/: docker-compose.yaml
examples/: embedding_usage_example.py
scripts/: setup-dev.bat  setup-dev.sh
tests/: test_cost_control.py  test_cost_control_complete.py  test_embedding_providers.py  test_qdrant.py  test_qdrant_comprehensive.py  test_vector_store.py
tools/: cost_control_cli.py  cost_control_framework.py  privacy_check.py  setup_qdrant.py  test_qdrant_config.py
